--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "API for categories, subcategories, and duas using SQLite",
     "main": "index.js",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
+      "start": "node index.js",
+      "dev": "nodemon src/index.js"
     },
     "dependencies": {
       "cors": "^2.8.5",
