--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "API for categories, subcategories, and duas using SQLite",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
+      "start": "node src/index.js",
       "dev": "nodemon src/index.js"
     },
     "dependencies": {
