--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ird-duaruqyah-backend",
     "version": "1.0.0",
     "description": "API for categories, subcategories, and duas using SQLite",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
       "start": "node src/index.js",
       "dev": "nodemon src/index.js"
